@@ -1,3 +1,8 @@
+2005-06-29  Peter Korsgaard  <jacmet@sunsite.dk>
+
+	* src/flash.c (find_free): Maintain sort order when splitting
+	chunks.
+
 2005-06-27  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* src/net/enet.c (ntohs): Return type is a short.
